# lumina

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pm2.json  pyproject.toml  renovate.json  ruff.toml  run.py  transifex.yaml
.github/: copilot-instructions.md
.github/workflows/: bump-version.yml  docker.yml  pyright.yml  release.yml
l10n/: en-US.yaml  zh-TW.yaml  zh_TW.yaml
lumina/: bot.py  command_tree.py  components.py  constants.py  embeds.py  error_handler.py  exceptions.py  health.py  l10n.py  logging.py  models.py  types.py  utils.py
lumina/cogs/: admin.py  birthday.py  health.py  notes.py  reminder.py  schedule.py  settings.py  todo.py
migrations/models/: 0_20251028134721_init.py  1_20251028134946_update.py
