[project]
authors = [{email = "seria.ati@gmail.com", name = "seriaati"}]
dependencies = [
  "aerich[toml]>=0.9.2",
  "aiofiles>=24.1.0",
  "anyio>=4.11.0",
  "dateparser>=1.2.2",
  "discord-py>=2.4.0",
  "jishaku>=2.5.2",
  "loguru>=0.7.2",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "tortoise-orm>=0.21.6",
]
description = "Your life organizer on Discord."
license = {file = "LICENSE"}
name = "lumina"
readme = "README.md"
requires-python = ">=3.11"
version = "1.0.2"

[tool.pyright]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."

[tool.aerich]
tortoise_orm = "lumina.bot.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
